Expand nested groups icon overlaps with group icon #JPS-8105 Fixed

--- a/components/table/table.css
+++ b/components/table/table.css
@@ -185,9 +185,9 @@
 
   float: left;
 
-  width: 21px;
   height: 16px;
-  padding-right: 0;
+  padding-top: 1px;
+  padding-right: unit;
 }
 
 @value top: -5px;
